fix: svg properly displays on safari

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -61,7 +61,7 @@
 }
 .card:focus .cardBack.light,
 .card:focus .cardFront.light {
-  outline: 3px solid #0f2f62;
+  box-shadow: 0 0 0 2px #0f2f62;
 }
 .card:focus {
   outline: none;
